Issues for IE: 1) css "-overflow": visible 2) removed filter opacity for default appearance. 3) calling focus() in a setTimeout, because onfocus fires asynchronously.
Tests still passing and fully functional in FF2-3, Safari.

--- a/src/widget/calendar/css/Calendar.css
+++ b/src/widget/calendar/css/Calendar.css
@@ -8,16 +8,17 @@
     -webkit-user-select: none;
     font-size: 12px;
     font-family: sans-serif;
-    filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
     overflow: hidden;
+    -overflow: visible;
     visibility: hidden;
     background: #f3f3f3;
     z-index: 10;
+    width: 14em;
 }
 /* for the style transition */
 .ape-calendar-anim-start {
     opacity: .1;
-	filter:Alpha(Opacity=20);
+    filter:Alpha(Opacity=20);
     height: 10em;
     width: 9em;
 }
